fix(#117): align job detail design

--- a/src/layout/content-detail.module.css
+++ b/src/layout/content-detail.module.css
@@ -7,20 +7,25 @@
     @apply italic m-3 text-base text-center;
   }
 
-  & h2 {
-    @apply font-title font-900 pt-12 mb-6 text-center text-3xl uppercase;
-  }
-
-  & h3 {
-    @apply font-title font-900 pt-12 mb-6 text-center text-3xl uppercase;
-  }
-
+  & h2,
+  & h3,
   & h4 {
-    @apply font-title font-900 pt-12 mb-6 text-center text-3xl uppercase;
+    @apply text-3xl;
   }
 
   & h5 {
-    @apply font-title font-900 pt-12 mb-6 text-center text-2xl uppercase;
+    @apply text-2xl;
+  }
+
+  & h2,
+  & h3,
+  & h4,
+  & h5 {
+    @apply font-title font-900 mt-12 mb-6 text-center uppercase;
+
+    &:first-child {
+      @apply mt-6;
+    }
   }
 
   & iframe {
